# opencl_wrapper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  opencl_wrapper.cbp
headers/: debug_utils.hpp  debugger.hpp  my_gpu.hpp  oclw.hpp
include/: debug_utils.hpp  oclw.hpp
kernels/: test_kernel.cl
sources/: debug_utils.cpp  debugger.cpp  main.cpp  my_gpu.cpp  oclw.cpp
src/: oclw.cpp
